testsuite/tests/typecheck/should_fail/T13300.stderr

T13300.hs:5:3: error: [GHC-45219]
    • Data constructor ‘WI’ returns type ‘Int’
        instead of an instance of its parent type ‘W’
    • In the definition of data constructor ‘WI’
      In the data type declaration for ‘W’
